--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -14,16 +14,34 @@
   background: url('~/src/assets/images/icons.png') no-repeat;
 }
 
+.fullboard {
+  width: 312px;
+  height: 370px;
+  background-color: gray;
+}
+
 .boardstyle {
-  width: 300px;
-  height: 450px;
-  background-color: black;
+  position: relative;
+  left: 12px;
+  width: 288px;
+  height: 288px;
+  background-color: gray;
+}
+
+.headBoard {
+  position: relative;
+  top: 16px;
+  bottom: 16px;
+  width: 288px;
+  height: 52px;
+  border: 2px solid white;
 }
 
 .cellstyle {
   position: relative;
+  top: 16px;
   float: left;
-  width: 24px;
-  height: 24px;
+  width: 32px;
+  height: 32px;
   border: 2px solid white;
 }
