--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -71,6 +71,8 @@
   left: 90px;
   width: 60px;
   height: 40px;
+  font-size: 30px;
+  color: red;
   background-color: black;
   outline: white outset 3px;
 }
