--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -49,7 +49,6 @@
   justify-content: space-between;
   width: 360px;
   height: 60px;
-  margin-bottom: 12p;
 }
 
 .form {
@@ -70,6 +69,16 @@
 
 .inp {
   width: 50px;
+}
+
+.button {
+  width: 40px;
+  height: 23px;
+  background-color: white;
+}
+
+.button:hover {
+  background: rgb(128 128 128 / 20%);
 }
 
 .boardstyle {
