--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,9 +3,11 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  width: -webkit-fill-available;
+  height: -webkit-fill-available;
   min-height: 100vh;
   padding: 0 0.5rem;
+  overflow: scroll;
 }
 
 .allDifficulcy {
