--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -117,6 +117,9 @@
   position: relative;
   top: 10px;
   left: 5%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 60px;
   height: 40px;
   font-size: 30px;
@@ -150,6 +153,7 @@
   height: 40px;
   font-size: 30px;
   color: red;
+  text-align: center;
   background-color: black;
   outline: white outset 3px;
 }
