--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -24,8 +24,9 @@
 .fullboard {
   display: flex;
   justify-content: center;
-  background-color: gray;
-  outline: white outset 3px;
+  background-color: #c6c6c6;
+  border: 3px, solid;
+  border-color: #fff #fff #808080 #808080;
 }
 
 .easy {
@@ -96,7 +97,7 @@
   position: relative;
   width: 93%;
   height: 100%;
-  background-color: gray;
+  background-color: #c6c6c6;
 }
 
 .headBoard {
@@ -106,6 +107,7 @@
   justify-content: space-between;
   width: 100%;
   height: 60px;
+  background-color: #c0c0c0;
 
   /* margin-bottom: 16px; */
 
@@ -171,7 +173,8 @@
   float: left;
   width: 32px;
   height: 32px;
-  outline: white outset 3px;
+  border: 3px, solid;
+  border-color: #fff #fff #808080 #808080;
 }
 
 .bombstyle {
