--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -176,7 +176,7 @@
   float: left;
   width: 32px;
   height: 32px;
-  border: 3px, solid;
+  border: 3px solid;
   border-color: #fff #808080 #808080#FFF;
 }
 
