--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -7,7 +7,7 @@
   height: -webkit-fill-available;
   min-height: 100vh;
   padding: 0 0.5rem;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .allDifficulcy {
@@ -75,7 +75,7 @@
   background-color: #c6c6c6;
   border: 5px, solid;
   border-color: #fff #808080 #808080 #fff;
-  box-shadow: -10px -10px 10px -8px #ccc;
+  box-shadow: -1px -1px 1px -1px #ccc;
 }
 
 .topborder {
